  - viewer - fix multiple requests when changing views and start/stop times
  - viewer - fix setting user permissions not applying until page reload
  - viewer - improve column resizing
  - viewer - add button to open sessions cron query tagged
  - viewer - notifier links to results
  - viewer - cancel hunts & remove hunt name and id from sessions
  - wise - new config UI, enable with --webconfig
  - wise - more moloch->arkime changes
  - wise - for json data can now set arrayPath for start of where to parse
  - wise - new elasticsearchfile type
  - wise - threatstream results now cached
  - wise - support memcached for cache
  - wise - new urlinfile://filepath where config is the first line of filepath file
  - wise - help page
  - all - renamed rightclicks to valueactions
  - all - many typos fixed
  - all - support Elasticsearch API Keys (elasticsearchAPIKey setting)
  - esproxy - first version, see https://arkime.com/esproxy

2.7.1 2020/12/01
  - release - glib 2.66.2, curl 7.73.0, nghttp2 1.42.0
  - wise - fix UI queries hanging
  - viewer - fix anonymous user settings not saving
  - viewer - fix lastUsed time not always saving to ES
  - capture - new packet dedup feature https://arkime.com/settings#packet-deduplication-settings
  - capture - close pfring on exit (issue #1538)
  - capture - fix http2 parsing crash
  - db - Moloch to Arkime text fixes

2.7.0 2020/11/18
  - NOTICE - Requires ES 7.4 or newer
  - NOTICE - Moloch to Arkime rebranding in UI, everything else still Moloch
  - all - ES 7 updates, fix most depreciated warnings (mappings/templates still remain)
  - viewer - fix mpls decoding
  - viewer - new themes and logo selection
  - capture - fix http CONNECT response parsing
  - capture - New pcap-over-ip reader support
  - db - can import gz files directly now
  - db - fix issues with version importing

2.4.2 2020/11/10
  - NOTICE - db.pl upgrade is required
  - NOTICE - this is the last version to support ES 6
  - release - node 12.19.0